<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".Activity.ChangePasswordActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_profile"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_back_change"
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="30dp"
                    android:padding="10dp"
                    android:text="Change Password"
                    android:textColor="#0C700F"
                    android:textSize="20sp"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar_profile">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_oldpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/key_1"
                    tools:ignore="ContentDescription" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_old"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_old_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/old_password"
                        android:inputType="text"
                        android:textColor="@android:color/black"
                        android:textCursorDrawable="@null" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_newpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_oldpass"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/key_1"
                    tools:ignore="ContentDescription" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_new_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_password"
                        android:inputType="text"
                        android:textColor="@android:color/black"
                        android:textCursorDrawable="@null" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_reenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_newpass"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/key_1"
                    tools:ignore="ContentDescription" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_reenter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_reenter_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/retype_password"
                        android:inputType="text"
                        android:textColor="@android:color/black"
                        android:textCursorDrawable="@null" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_update"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_reenter"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:background="@android:color/black"
                android:text="@string/update"
                android:textColor="@android:color/white" />

        </RelativeLayout>
    </ScrollView>


</LinearLayout>